(bug) homepage alignment (#489)
included resizing headings

--- a/app/src/modules/homepage/homepage.component.scss
+++ b/app/src/modules/homepage/homepage.component.scss
@@ -14,6 +14,11 @@
     padding: 100px 52px;
     margin: auto;
     max-width: 1280px;
+
+    @media screen and (max-width: 720px){
+      padding: 30px 12px;
+      text-align: center;
+    }
   }
 
   .m-homepage--hero--overlay {
@@ -41,6 +46,10 @@
       letter-spacing: 1.25px;
       //color: rgba(255,255,255,0.85);
       //color: rgba(0,0,0,0.85);
+
+      @media screen and (max-width: 720px){
+        font-size: 42px;
+      }
     }
 
     h3 {
@@ -50,6 +59,10 @@
       letter-spacing: 1px;
       line-height: 24px;
       padding-right: 70px;
+
+      @media screen and (max-width: 720px){
+        padding-right: 8px;
+      }
     }
     z-index: 2;
   }
@@ -57,6 +70,9 @@
   .m-homepage--signup{
     flex: 1;
 
+    @media screen and (max-width: 720px){
+      display:none;
+    }
     minds-form-register{
       .mdl-card{
         background:transparent;
@@ -163,6 +179,10 @@ m-homepage {
       font-weight: 600;
       text-transform: uppercase;
       letter-spacing: 5px;
+
+      @media screen and (max-width: 1250px){
+        font-size: 36px;
+      }
     }
 
     h2{
@@ -170,6 +190,10 @@ m-homepage {
       font-size: 32px;
       font-weight: 400;
       letter-spacing: 4px;
+
+      @media screen and (max-width: 1250px){
+        font-size: 22px;
+      }
     }
 
     h4{
